Fix typo - missing close brackets.

--- a/views/control.erb
+++ b/views/control.erb
@@ -18,4 +18,4 @@
 <button class="command" data-cmd="turret_stop">Stop</button>
 
 <h1>Video</h1>
-<iframe src="http://10.10.1.1:8196" align="center" width="320" height="240" scrolling="no" frameborder="no" marginheight="0px"</iframe>
+<iframe src="http://10.10.1.1:8196" align="center" width="320" height="240" scrolling="no" frameborder="no" marginheight="0px"></iframe>
